--- a/styles/styles.css
+++ b/styles/styles.css
@@ -411,12 +411,49 @@ img {
   background-position: center;
 }
 
-.fa-volume-mute,
-.fa-volume-up {
+.sound,
+.sound::before {
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.sound {
   position: absolute;
   top: 30px;
   right: 50px;
   color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 72px;
+  width: 72px;
+  border: 2px dashed transparent;
+  border-radius: 100%;
+  overflow: hidden;
+}
+
+.sound::before {
+  position: absolute;
+  content: "";
+  height: 64px;
+  width: 64px;
+  border: 2px dashed white;
+  border-radius: 100%;
+  top: 0;
+  right: 0;
+  opacity: 0;
+}
+
+.sound:hover::before {
+  opacity: 1;
+  -webkit-animation: rotate 12s linear infinite;
 }
 
 .question {
@@ -442,11 +479,10 @@ img {
   .question {
     width: 50px;
   }
-  .fa-volume-mute,
-  .fa-volume-up {
-    top: 20px;
+  .sound {
+    top: 0;
     right: initial;
-    left: 20px;
+    left: 0;
   }
 }
 .question:hover {
@@ -522,22 +558,40 @@ i {
   }
 }
 button,
-i {
+.close {
   cursor: pointer;
-  -webkit-transition: 1s;
-  transition: 1s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
-button:hover,
-i:hover {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+.instructions.modal button:hover {
+  -webkit-transform: translateY(-10px);
+          transform: translateY(-10px);
+  background: #027bbb;
+}
+
+.congrats.modal button:hover {
+  -webkit-transform: translateX(10px);
+          transform: translateX(10px);
+}
+
+.congrats.modal button.nextLevel:hover {
+  background: #027bbb;
+}
+
+.congrats.modal button.playAgain:hover {
+  color: #027bbb;
+  border-color: #027bbb;
 }
 
 .close {
-  text-align: right;
   position: absolute;
   right: 10px;
+  top: 10px;
+}
+
+.close:hover {
+  color: #027bbb;
 }
 
 @-webkit-keyframes chaChing {
@@ -684,6 +738,26 @@ i:hover {
   100% {
     -webkit-transform: rotate(3deg);
     transform: rotate(3deg);
+  }
+}
+@-webkit-keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+@keyframes rotate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 .cloud {
